src/objects/Educations__c.object
<CustomObject>
    <fields>
        <fullName>Has_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Histories__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Histories</label>
        <referenceTo>Histories__c</referenceTo>
        <relationshipLabel>Educations</relationshipLabel>
        <relationshipName>Educations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_Last_Updated__c</fullName>
        <label>Status Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Uid__c</fullName>
        <label>Uid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Un_Formatted_Text__c</fullName>
        <label>Un Formatted Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Educations</label>
    <nameField>
        <label>Educations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Educations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>